[metadata]
name = flactomp3
version = 0.1.0
author = ZhengxuanQian
author_email = gokinjolno112358@gmail.com
description = convert flac to mp3 through ffmpeg
long_description = file: README.md
long_description_type = text/markdown
url = https://github.com/i1123581321/f2m
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    f2m = f2m.f2m:process